tests/ui/g-empty_arms.stderr
error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-empty_arms.rs:11:18
   |
11 |     let arm = g::send::<Controller, Target, g::Msg<3, ()>>();
   |                  ^^^^   ----------  ------  ------------- supplied 3 generic arguments
   |                  |
   |                  expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
11 |     let arm = g::send::<Controller, Target, g::Msg<3, ()>, LANE>();
   |                                                          ++++++

error[E0277]: the trait bound `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<3>, ()>>, StepNil>: hibana::global::steps::RouteArm<0>` is not satisfied
  --> tests/ui/g-empty_arms.rs:12:39
   |
12 |     let builder = g::route_chain::<0, ArmSteps>(arm);
   |                                       ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `hibana::global::steps::RouteArm<0>` is not implemented for `StepCons<SendStep<Role<0>, Role<1>, Message<LabelMarker<3>, ()>, 0>, StepNil>`
           but it is implemented for `StepCons<SendStep<Role<0>, Role<0>, _, _>, _>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`
